resource-testing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: queue
spec:
    selector:
        matchLabels:
            app: queue
    replicas: 2
    template: # template for the pods
        metadata:
            labels: 
                app: queue
        spec:
            containers:
            - name: queue
              image: richardchesterwood/k8s-fleetman-queue:release2
              resources:
                requests:
                    memory: 300Mi # 1 Mi = 1024 Ki = 1024 bytes (So-called: power of 2 version)
                                  # 1 M  = 1024 K  = 1000 bytes
                    cpu: 100m
                # limits:
                    # memory: 300Mi
                    # cpu: 200m
