mongo-stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
spec:
    selector:
        matchLabels:
            app: mongodb
    replicas: 1
    template: # template for the pods
        metadata:
            labels: 
                app: mongodb
        spec:
            containers:
            - name: mongodb
              image: mongo:3.6.19-xenial
              volumeMounts:
                - name: mongo-persistent-storage
                  mountPath: /data/db
              resources:
                requests:
                  memory: 500Mi
                  cpu: 500m
            volumes:
                - name: mongo-persistent-storage
                  # hostPath:
                    # directory location on host
                    # path: /mnt/some/directory/structure/
                    # this field is optional
                    # type: DirectoryOrCreate
                  persistentVolumeClaim:
                    claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-mongodb
spec:
    selector: 
        app: mongodb
    ports:
        - name: mongoport
          port: 27017
    type: ClusterIP
