networking-tests.yml
apiVersion: v1
kind: Pod
metadata:
    name: mysql
    labels:
        app: mysql
spec:
    containers:
        - name: mysql
          image: mysql:5
---
kind: Service
apiVersion: v1
metadata:
    name: database
spec:
    selector:
        app: mysql
    ports:
        - port: 3306
    type: ClusterIP
