services.yml
---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-webapp
spec:
    # This defines whitch pods are going to be represented by this service.
    # The services becomes a network endpoint for either services or maybe 
    # external users to connect to (e.g.: browser).
    selector:
        app: webapp
    ports:
        - name: http
          port: 80
          # nodePort: 30080 # Only available when the service is of type NodePort.
    type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-queue
spec:
    # This defines whitch pods are going to be represented by this service.
    # The services becomes a network endpoint for either services or maybe 
    # external users to connect to (e.g.: browser).
    selector:
        app: queue
    ports:
        - name: http
          port: 8161
          # nodePort: 30010 # Only available when the service is of type NodePort.
        - name: endpoint
          port: 61616
    type: ClusterIP
    
---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-position-tracker
spec:
    # This defines whitch pods are going to be represented by this service.
    # The services becomes a network endpoint for either services or maybe 
    # external users to connect to (e.g.: browser).
    selector:
        app: position-tracker
    ports:
        - name: http
          port: 8080
    type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-api-gateway
spec:
    # This defines whitch pods are going to be represented by this service.
    # The services becomes a network endpoint for either services or maybe 
    # external users to connect to (e.g.: browser).
    selector:
        app: api-gateway
    ports:
        - name: http
          port: 8080
    type: ClusterIP
